--- a/monprojet/gestion/templates/gestion/conge_list.html
+++ b/monprojet/gestion/templates/gestion/conge_list.html
@@ -7,7 +7,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">Liste des Congés</h2>
-        <a href="{% url 'conge_create' %}" class="btn btn-primary mb-3">
+        <a href="{% url 'conge-create' %}" class="btn btn-primary mb-3">
             <i class="fas fa-plus"></i> Nouveau Congé
         </a>
     </div>
@@ -45,13 +45,13 @@
             </div>
             <div class="card-footer bg-transparent">
                 <div class="btn-group" role="group">
-                    <a href="{% url 'conge_detail' conge.id %}" class="btn btn-info btn-sm">
+                    <a href="{% url 'conge-detail' conge.id %}" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i> Détails
                     </a>
-                    <a href="{% url 'conge_update' conge.id %}" class="btn btn-warning btn-sm">
+                    <a href="{% url 'conge-update' conge.id %}" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i> Modifier
                     </a>
-                    <a href="{% url 'conge_delete' conge.id %}" class="btn btn-danger btn-sm delete-confirm">
+                    <a href="{% url 'conge-delete' conge.id %}" class="btn btn-danger btn-sm delete-confirm">
                         <i class="fas fa-trash"></i> Supprimer
                     </a>
                 </div>
