--- a/monprojet/gestion/templates/gestion/employer_list.html
+++ b/monprojet/gestion/templates/gestion/employer_list.html
@@ -7,7 +7,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">Liste des Employés</h2>
-        <a href="{% url 'employer_create' %}" class="btn btn-primary mb-3">
+        <a href="{% url 'employer-create' %}" class="btn btn-primary mb-3">
             <i class="fas fa-plus"></i> Nouvel Employé
         </a>
     </div>
@@ -26,13 +26,13 @@
             </div>
             <div class="card-footer bg-transparent">
                 <div class="btn-group" role="group">
-                    <a href="{% url 'employer_detail' employer.id %}" class="btn btn-info btn-sm">
+                    <a href="{% url 'employer-detail' employer.id %}" class="btn btn-info btn-sm">
                         <i class="fas fa-eye"></i> Détails
                     </a>
-                    <a href="{% url 'employer_update' employer.id %}" class="btn btn-warning btn-sm">
+                    <a href="{% url 'employer-update' employer.id %}" class="btn btn-warning btn-sm">
                         <i class="fas fa-edit"></i> Modifier
                     </a>
-                    <a href="{% url 'employer_delete' employer.id %}" class="btn btn-danger btn-sm delete-confirm">
+                    <a href="{% url 'employer-delete' employer.id %}" class="btn btn-danger btn-sm delete-confirm">
                         <i class="fas fa-trash"></i> Supprimer
                     </a>
                 </div>
