--- a/monprojet/gestion/templates/gestion/service_list.html
+++ b/monprojet/gestion/templates/gestion/service_list.html
@@ -7,7 +7,7 @@
 <div class="row mb-4">
     <div class="col">
         <h2 class="mb-4">Liste des Services</h2>
-        <a href="{% url 'service_create' %}" class="btn btn-primary mb-3">
+        <a href="{% url 'service-create' %}" class="btn btn-primary mb-3">
             <i class="fas fa-plus"></i> Nouveau Service
         </a>
     </div>
@@ -31,13 +31,13 @@
                         <td>{{ service.employer_set.count }}</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a href="{% url 'service_detail' service.id %}" class="btn btn-info btn-sm">
+                                <a href="{% url 'service-detail' service.id %}" class="btn btn-info btn-sm">
                                     <i class="fas fa-eye"></i> Détails
                                 </a>
-                                <a href="{% url 'service_update' service.id %}" class="btn btn-warning btn-sm">
+                                <a href="{% url 'service-update' service.id %}" class="btn btn-warning btn-sm">
                                     <i class="fas fa-edit"></i> Modifier
                                 </a>
-                                <a href="{% url 'service_delete' service.id %}" class="btn btn-danger btn-sm delete-confirm">
+                                <a href="{% url 'service-delete' service.id %}" class="btn btn-danger btn-sm delete-confirm">
                                     <i class="fas fa-trash"></i> Supprimer
                                 </a>
                             </div>
