Refonte de la gestion des congés et des employés : ajout de nouvelles fonctionnalités, mise à jour des modèles, création de formulaires et de templates pour l'approbation des congés, ainsi que l'amélioration de l'interface utilisateur avec Bootstrap. Suppression des anciens fichiers de templates et ajout de nouveaux pour une meilleure organisation.

--- a/monprojet/gestion/templates/gestion/conge/form.html
+++ b/monprojet/gestion/templates/gestion/conge/form.html
@@ -1,10 +1,10 @@
-{% extends 'gestion/form_base.html' %}
+{% extends 'gestion/shared/form_base.html' %}
 
 {% block form_title %}
     {% if form.instance.pk %}
-        Modifier l'employé
+        Modifier la demande de congé
     {% else %}
-        Nouvel employé
+        Nouvelle demande de congé
     {% endif %}
 {% endblock %}
 
@@ -12,8 +12,8 @@
     {% if form.instance.pk %}
         Mettre à jour
     {% else %}
-        Créer
+        Soumettre
     {% endif %}
 {% endblock %}
 
-{% block cancel_url %}{% url 'employer-list' %}{% endblock %} 
+{% block cancel_url %}{% url 'conge-list' %}{% endblock %} 
