--- a/monprojet/gestion/templates/gestion/employer/ajout/form.html
+++ b/monprojet/gestion/templates/gestion/employer/ajout/form.html
@@ -1,10 +1,10 @@
-{% extends 'gestion/form_base.html' %}
+{% extends 'gestion/shared/form_base.html' %}
 
 {% block form_title %}
     {% if form.instance.pk %}
-        Modifier le service
+        Modifier l'employé
     {% else %}
-        Nouveau service
+        Nouvel employé
     {% endif %}
 {% endblock %}
 
@@ -16,4 +16,4 @@
     {% endif %}
 {% endblock %}
 
-{% block cancel_url %}{% url 'service-list' %}{% endblock %} 
+{% block cancel_url %}{% url 'employer-list' %}{% endblock %} 
