--- a/monprojet/gestion/templates/gestion/service/ajout/form.html
+++ b/monprojet/gestion/templates/gestion/service/ajout/form.html
@@ -1,10 +1,10 @@
-{% extends 'gestion/form_base.html' %}
+{% extends 'gestion/shared/form_base.html' %}
 
 {% block form_title %}
     {% if form.instance.pk %}
-        Modifier la demande de congé
+        Modifier le service
     {% else %}
-        Nouvelle demande de congé
+        Nouveau service
     {% endif %}
 {% endblock %}
 
@@ -12,8 +12,8 @@
     {% if form.instance.pk %}
         Mettre à jour
     {% else %}
-        Soumettre
+        Créer
     {% endif %}
 {% endblock %}
 
-{% block cancel_url %}{% url 'conge-list' %}{% endblock %} 
+{% block cancel_url %}{% url 'service-list' %}{% endblock %} 
