--- a/monprojet/gestion/templates/gestion/service_detail.html
+++ b/monprojet/gestion/templates/gestion/service_detail.html
@@ -58,22 +58,23 @@
                         </div>
                         <div class="card-body">
                             {% if employers %}
-                                <div class="list-group">
-                                    {% for employer in employers %}
-                                    <a href="{% url 'employer-detail' employer.pk %}" class="list-group-item list-group-item-action">
-                                        <div class="d-flex w-100 justify-content-between">
-                                            <h6 class="mb-1">{{ employer.prenom }} {{ employer.nom }}</h6>
-                                            <small>{{ employer.poste }}</small>
-                                        </div>
-                                        <small>{{ employer.email }}</small>
-                                    </a>
-                                    {% endfor %}
-                                </div>
+                            <div class="list-group">
+                                {% for employer in employers %}
+                                <a href="{% url 'employer-detail' employer.pk %}"
+                                    class="list-group-item list-group-item-action">
+                                    <div class="d-flex w-100 justify-content-between">
+                                        <h6 class="mb-1">{{ employer.prenom }} {{ employer.nom }}</h6>
+                                        <small>{{ employer.poste }}</small>
+                                    </div>
+                                    <small>{{ employer.email }}</small>
+                                </a>
+                                {% endfor %}
+                            </div>
                             {% else %}
-                                <div class="text-center py-3">
-                                    <i class="fas fa-users fa-2x text-muted mb-2"></i>
-                                    <p class="text-muted">Aucun employé dans ce service</p>
-                                </div>
+                            <div class="text-center py-3">
+                                <i class="fas fa-users fa-2x text-muted mb-2"></i>
+                                <p class="text-muted">Aucun employé dans ce service</p>
+                            </div>
                             {% endif %}
                         </div>
                     </div>
